# ScanFlow

./: .gitignore  LICENSE  README.md  ROADMAP.md  pyproject.toml
scanflow/: __init__.py  __main__.py  cli.py
scanflow/automation/: __init__.py  feature_discovery.py  mosaic.py  recipe.py  runner.py  scan_metrics.py  survey.py
scanflow/core/: __init__.py  afm.py  coarse.py  events.py  feedback.py  lateral.py  lockin.py  mock_dispatch.py  safety.py  scan.py  spectroscopy.py  stm_client.py  temperature.py  tipform.py  z_monitor.py
scanflow/drift/: __init__.py  detector.py
scanflow/gui/: app.py  main_window.py  theme.py
scanflow/gui/panels/: advanced_spec_panel.py  afm_tuning_panel.py  automation_panel.py  coarse_panel.py  control_panel.py  drift_panel.py  lateral_panel.py  live_view_panel.py  log_panel.py  mosaic_panel.py  parameter_panel.py  positioning_diag_panel.py  spectroscopy_panel.py  survey_panel.py  sweep_panel.py  timespec_panel.py  z_stability_panel.py
scanflow/gui/widgets/: sweep_confirm.py  temperature_widget.py
scanflow/io/: __init__.py  pptx_export.py  probeflow_launch.py  session.py
tests/: test_drift.py  test_feature_discovery.py  test_mock.py  test_mosaic.py  test_recipe.py  test_recipe_v2.py  test_safety.py  test_scan_metrics.py  test_sweep_confirm.py  test_z_monitor.py
tools/: README.md
tools/lab-monitor/: monitor_loop.bat  relay_to_slack.py  take_screenshots.py
tools/lab-sync/: pull_logs.bat  push_scanflow.bat
